# ethereum-consensus

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  rustc-ice-2024-03-29T15_01_52-72620.txt
beacon-api-client/: Cargo.toml  README.md
beacon-api-client/examples/: api_sketch.rs  blob_sketch.rs  get_block.rs  post.rs  sse.rs
beacon-api-client/src/: api_client.rs  api_error.rs  lib.rs  main.rs  serde.rs  types.rs
beacon-api-client/src/cli/: config.rs
ethereum-consensus/: Cargo.toml
ethereum-consensus/examples/: bls.rs  read_ssz.rs  serde.rs  sketch.rs  state_transition_across_multiple_forks.rs  state_transition_mainnet_blocks.rs  stf_clap_multiple_forks.rs
ethereum-consensus/examples/data/beacon_blocks/: block_2001.ssz  block_2003.ssz  block_2005.ssz  block_2008.ssz  block_2009.ssz  block_2010.ssz  block_2011.ssz  block_2013.ssz  block_2018.ssz  block_2019.ssz  block_2020.ssz  block_2024.ssz  block_2025.ssz  block_2027.ssz  block_2030.ssz  block_2032.ssz  block_2033.ssz  block_2034.ssz
ethereum-consensus/examples/mainnet_blocks/phase0/beacon_blocks/: block_2000.ssz  block_2002.ssz  block_2004.ssz  block_2006.ssz  block_2007.ssz  (+12 more)
ethereum-consensus/examples/state_transitions/: altair_blocks.rs  bellatrix_blocks.rs  capella_blocks.rs  deneb_blocks.rs  phase0_blocks.rs
ethereum-consensus/src/: clock.rs  crypto.rs  domains.rs  error.rs  execution_engine.rs  fork.rs  kzg.rs  lib.rs  networking.rs  networks.rs  primitives.rs  serde.rs  signing.rs
ethereum-consensus/src/altair/: beacon_block.rs  beacon_state.rs  block_processing.rs  constants.rs  epoch_processing.rs  fork.rs  genesis.rs  helpers.rs  light_client.rs  mod.rs  networking.rs  sync.rs  validator.rs
ethereum-consensus/src/altair/presets/: mainnet.rs  minimal.rs  mod.rs
ethereum-consensus/src/altair/spec/: mod.rs
ethereum-consensus/src/altair/state_transition/: epoch_processing.rs  helpers.rs
ethereum-consensus/src/bellatrix/: beacon_block.rs  beacon_state.rs  blinded_beacon_block.rs  block_processing.rs  epoch_processing.rs  execution.rs  execution_engine.rs  execution_payload.rs  fork.rs  fork_choice.rs  genesis.rs  helpers.rs  mod.rs  state_transition.rs
ethereum-consensus/src/bellatrix/presets/: mainnet.rs  minimal.rs
ethereum-consensus/src/bellatrix/spec/: mod.rs
ethereum-consensus/src/bellatrix/state_transition/: block_processing.rs  epoch_processing.rs  genesis.rs  helpers.rs  mod.rs
ethereum-consensus/src/builder/: mod.rs
ethereum-consensus/src/capella/: beacon_block.rs  beacon_state.rs  blinded_beacon_block.rs  block_processing.rs  bls_to_execution_change.rs  epoch_processing.rs  execution_engine.rs  execution_payload.rs  fork.rs  genesis.rs  helpers.rs  light_client.rs  mod.rs  withdrawal.rs
ethereum-consensus/src/capella/presets/: mainnet.rs  minimal.rs
ethereum-consensus/src/capella/spec/: mod.rs
ethereum-consensus/src/configs/: goerli.rs  holesky.rs  hoodi.rs  mainnet.rs  minimal.rs  mod.rs  sepolia.rs
ethereum-consensus/src/crypto/: bls.rs  kzg.rs  mod.rs
ethereum-consensus/src/deneb/: beacon_block.rs  beacon_state.rs  blinded_beacon_block.rs  blinded_blob_sidecar.rs  blob_sidecar.rs  block_processing.rs  epoch_processing.rs  execution.rs  execution_engine.rs  execution_payload.rs  fork.rs  genesis.rs  helpers.rs  light_client.rs  mod.rs  networking.rs  polynomial_commitments.rs
ethereum-consensus/src/deneb/presets/: mainnet.rs  minimal.rs  mod.rs
ethereum-consensus/src/deneb/spec/: mod.rs
ethereum-consensus/src/electra/: beacon_block.rs  beacon_state.rs  blinded_beacon_block.rs  blob_sidecar.rs  block_processing.rs  constants.rs  deposit_receipt.rs  epoch_processing.rs  execution_engine.rs  execution_layer_exit.rs  execution_payload.rs  fork.rs  genesis.rs  helpers.rs  mod.rs  operations.rs
ethereum-consensus/src/electra/presets/: mainnet.rs  minimal.rs  mod.rs
ethereum-consensus/src/electra/spec/: mod.rs
ethereum-consensus/src/execution/: mod.rs
ethereum-consensus/src/phase0/: beacon_block.rs  beacon_state.rs  block_processing.rs  constants.rs  epoch_processing.rs  genesis.rs  helpers.rs  mod.rs  networking.rs  operations.rs  slot_processing.rs  state_transition.rs  validator.rs
ethereum-consensus/src/phase0/presets/: mainnet.rs  minimal.rs  mod.rs
ethereum-consensus/src/phase0/spec/: mod.rs
ethereum-consensus/src/ssz/: byte_list.rs  byte_vector.rs  mod.rs
ethereum-consensus/src/state_transition/: beacon_state.rs  context.rs  error.rs  execution_engine.rs  executor.rs  mod.rs
ethereum-consensus/src/state_transition/presets/: mainnet.rs  minimal.rs  mod.rs
ethereum-consensus/src/types/: beacon_block.rs  beacon_block_body.rs  beacon_state.rs  blinded_beacon_block.rs  blinded_beacon_block_body.rs  execution_engine.rs  execution_payload.rs  execution_payload_header.rs  mod.rs  signed_beacon_block.rs  signed_blinded_beacon_block.rs
ethereum-consensus/src/types/presets/: mainnet.rs  minimal.rs  mod.rs
ethereum-consensus/tests/: README.md  mod.rs  test_utils.rs
ethereum-consensus/tests/consensus_spec_tests/general/: mod.rs
ethereum-consensus/tests/consensus_spec_tests/minimal/: mod.rs
ethereum-consensus/tests/spec_test_runners/bls/: mod.rs
ethereum-consensus/tests/spec_test_runners/finality/: mod.rs
ethereum-consensus/tests/spec_test_runners/fork_choice/: mod.rs
ethereum-consensus/tests/spec_test_runners/merkle/: mod.rs
ethereum-consensus/tests/spec_test_runners/operations/: mod.rs
ethereum-consensus/tests/spec_test_runners/random/: mod.rs
ethereum-consensus/tests/spec_test_runners/rewards/: mod.rs
spec-gen/: Cargo.toml  README.md  justfile
spec-gen/src/: generator.rs  main.rs  type_generator.rs  visitors.rs
spec-tests/: Cargo.toml  README.md  justfile  main.rs  spec-test-version  test_case.rs  test_meta.rs  test_utils.rs
spec-tests/runners/: bls.rs  epoch_processing.rs  finality.rs  fork.rs  genesis.rs  kzg.rs  light_client.rs  merkle_proof.rs  mod.rs  operations.rs  random.rs  rewards.rs  sanity.rs  shuffling.rs  ssz_static.rs  transition.rs  utils.rs
(+2549 files in other folders)
