[package]
name = "beacon-api-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli"]
cli = ["clap"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11.10", features = ["json", "native-tls-vendored"] }
url = "2.2.2"
http = "0.2.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
itertools = "0.10.3"
clap = { version = "4.3.11", features = ["derive"], optional = true }
thiserror = "1.0.30"
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "6dee2390c8f4900ce3a521a6e6ac7ed0335cad2a" }
