[package]
name = "beacon-api-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli", "native-tls"]
cli = ["clap"]
rustls = ["reqwest/rustls-tls", "mev-share-sse/rustls"]
native-tls = ["reqwest/default-tls", "mev-share-sse/native-tls"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.11.10", default-features = false, features = ["json"] }
url = "2.2.2"
http = "0.2.7"

mev-share-sse = { git = "https://github.com/paradigmxyz/mev-share-rs", rev = "9eb2b0138ab3202b9eb3af4b19c7b3bf40b0faa8", default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
itertools = "0.10.3"
clap = { version = "4.3.11", features = ["derive"], optional = true }
thiserror = "1.0.30"
ethereum-consensus = { path = "../ethereum-consensus" }

[dev-dependencies]
dotenv = "0.15.0"
futures-util = "0.3.29"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4.3"
