[package]
name = "beacon-api-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli", "native-tls"]
cli = ["clap"]
rustls = ["reqwest/rustls-tls", "mev-share-sse/rustls"]
native-tls = ["reqwest/default-tls", "mev-share-sse/native-tls"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
reqwest =  { workspace = true }
url = { workspace = true }
http = { workspace = true }

mev-share-sse = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
clap = { version = "4.3.11", features = ["derive"], optional = true }
thiserror = { workspace = true }
ethereum-consensus = { path = "../ethereum-consensus" }

[dev-dependencies]
dotenv = "0.15.0"
futures-util = "0.3.29"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4.3"
