[package]
name = "ethereum-consensus"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["serde", "async"]
serde = ["hex", "serde_json", "serde_yaml"]
async = ["tokio", "tokio-stream", "async-stream"]
spec-tests = ["serde", "serde_yaml"]
ec = [
    "clap",
    "eyre",
    "bip39",
    "rand_core",
    "rayon",
    "hkdf",
    "ruint",
    "uuid",
    "scrypt",
    "serde",
    "aes",
    "ctr",
    "base64",
    "unicode-normalization",
]

[dependencies]
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "6755022b7727e3392bfbc2b9c683cb7bf9caa4ce" }
blst = "0.3.11"
rand = "0.8.4"
thiserror = "1.0.30"
sha2 = "0.10.8"
integer-sqrt = "0.1.5"
enr = "0.6.2"
multihash = { version = "0.16", default-features = false, features = [
    "std",
    "multihash-impl",
    "identity",
    "sha2",
] }
multiaddr = "0.14.0"
c-kzg = "0.1.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.81", optional = true }
serde_yaml = { version = "0.8", optional = true }
hex = { version = "0.4.3", optional = true }

tokio = { version = "1.18.2", features = ["full"], optional = true }
tokio-stream = { version = "0.1.8", optional = true }
async-stream = { version = "0.3.3", optional = true }

bs58 = "0.4.0"

clap = { version = "4.4.4", optional = true, features = ["derive"] }
eyre = { version = "0.6.8", optional = true }
bip39 = { version = "2.0.0", optional = true }
rand_core = { version = "0.6", optional = true, features = ["std"] }
rayon = { version = "1.8.0", optional = true }
hkdf = { version = "0.12.3", optional = true }
ruint = { version = "1.10.1", optional = true }
uuid = { version = "1.4.1", optional = true, features = [
    "v4",
    "fast-rng",
    "serde",
] }
scrypt = { version = "0.11.0", optional = true }
aes = { version = "0.8.3", optional = true }
ctr = { version = "0.9.2", optional = true }
base64 = { version = "0.21.4", optional = true }
unicode-normalization = { version = "0.1.22", optional = true }

[dev-dependencies]
serde_with = "1.13.0"
snap = "1"

[[bin]]
name = "ec"
required-features = ["ec"]
