[package]
name = "ethereum-consensus"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["serde", "async"]
serde = ["hex", "serde_json", "serde_yaml"]
async = ["tokio", "tokio-stream"]
optimized = ["shuffling"]
shuffling = [] # supports optimized shuffling routines
secret-key-debug = [
] # enable if you want to be able to print `crypto::SecretKey`
spec-tests = [] # enable extra features for testing
ec = [
    "secret-key-debug",
    "clap",
    "eyre",
    "bip39",
    "rand_core",
    "rayon",
    "hkdf",
    "ruint",
    "uuid",
    "scrypt",
    "serde",
    "aes",
    "ctr",
    "base64",
    "unicode-normalization",
    "bitvec",
]

[dependencies]
ssz_rs = { workspace = true }
blst = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
integer-sqrt = { workspace = true }
enr = { workspace = true }
multihash = { workspace = true }
multiaddr = { workspace = true }
c-kzg = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
bs58 = { workspace = true }
clap = { workspace = true, optional = true }
eyre = { workspace = true, optional = true }
bip39 = { workspace = true, optional = true }
rand_core = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
hkdf = { workspace = true, optional = true }
ruint = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
scrypt = { workspace = true, optional = true }
aes = { workspace = true, optional = true }
ctr = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
unicode-normalization = { workspace = true, optional = true }
bitvec = { workspace = true, optional = true }

[dev-dependencies]
toml = "0.8.2"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "b89af430e2f45f8a6e53776a6e5150c1b21458c6", default-features = false, features = [
    "c-kzg",
] }

[[bin]]
name = "ec"
required-features = ["ec"]

[[example]]
name = "stf_clap_multiple_forks"
path = "examples/stf_clap_multiple_forks.rs"