[package]
name = "spec-gen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { workspace = true }
prettyplease = { workspace = true } 
quote = { workspace = true }
clap = { workspace = true }
convert_case = { workspace = true }
